[package]
name = "iota_stream_example"
version = "0.1.0"
authors = ["Philipp Blum <philipp-blum@jakiku.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-lib-rs = { version = "^0.4.1" }
iota-streams-app-channel = { version = "0.1", path = "lib/iota-streams/iota-streams-app-channel" }
iota-streams-core = { version = "0.1.0", path = "lib/iota-streams/iota-streams-core" }
iota-streams-core-ntru = { version = "0.1.0", path = "lib/iota-streams/iota-streams-core-ntru" }
iota-streams-core-mss = { version = "0.1.0", path = "lib/iota-streams/iota-streams-core-mss" }
iota-streams-protobuf3 = { version = "0.1.0", path = "lib/iota-streams/iota-streams-protobuf3" }
iota-streams-app = { version = "0.1.0", path = "lib/iota-streams/iota-streams-app" }
failure = "0.1"
